--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,9 +10,9 @@ const subpath = pathname.match(/[^/]+/g);
 
 <header
   id="header"
-  class="fixed top-0 z-40 w-full border-b border-black/10 bg-white/80 backdrop-blur dark:border-white/10 dark:bg-black/80"
+  class="fixed top-0 z-50 hidden h-16 w-full md:block print:hidden"
 >
-  <div class="container mx-auto flex h-16 items-center justify-between px-4">
+  <div class="container mx-auto h-16">
     <div class="relative flex h-full items-center justify-between">
       {/* Logo/Title */}
       <a
@@ -54,10 +54,8 @@ const subpath = pathname.match(/[^/]+/g);
           <Icon name="github" class="block size-full" />
         </a>
         <ThemeToggle id="headerThemeToggle" />
+        <AuthButtons />
       </div>
-    </div>
-    <div class="flex items-center gap-4">
-      <AuthButtons />
     </div>
   </div>
 </header>
