--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,6 +6,9 @@ import { cn } from "@/lib/utils";
 import AuthButtons from './auth/AuthButtons.astro';
 const { pathname } = Astro.url;
 const subpath = pathname.match(/[^/]+/g);
+
+// Check if we're on a garden page
+const isGardenPage = pathname.startsWith('/garden');
 ---
 
 <header
@@ -54,7 +57,7 @@ const subpath = pathname.match(/[^/]+/g);
           <Icon name="github" class="block size-full" />
         </a>
         <ThemeToggle id="headerThemeToggle" />
-        <AuthButtons />
+        {isGardenPage && <AuthButtons />}
       </div>
     </div>
   </div>
